Fixed nav-bar and added authorization to make a petition page.

--- a/Content/myStyle.css
+++ b/Content/myStyle.css
@@ -56,6 +56,11 @@ h1 {
     color: #191ba9;
 }
 
+#logOff {
+    padding-right: 2px;
+    color: #191ba9;
+}
+
 #logInForm .error {
     color: red;
 }
