--- a/Content/Site.css
+++ b/Content/Site.css
@@ -8,9 +8,9 @@ a.navbar-brand {
 }
 
 /* Provide sufficient contrast against white background */
-a {
+/*a {
   color: #0366d6;
-}
+}*/
 
 .btn-primary {
   color: #fff;
