--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,18 +38,19 @@
 </head>
 <body>
 
-    <!--  Log in form within modal -->
-    <!-- (Hidden to user until log in button is clicked) -->
+    <!---->
+    <!--  Log in form within modal 
+    <!-- (Hidden to user until log in button is clicked) 
     <div class="container">
         <div class="modal hide" id="logInModal" data-backdrop="static" tabindex="-1">
             <div class="modal-dialogue mw-100 w-75" role="document">
                 <div class="modal-content">
-                    <!-- Modal header & close symbol -->
+                    <!-- Modal header & close symbol 
                     <div class="modal-header text-center">
                         <h2> Please enter your login details below:</h2>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
                     </div>
-                    <!-- Log in form -->
+                    <!-- Log in form 
                     <div class="modal-body">
                         <form role="form" id="logInForm" method="post">
                             <div class="form-group">
@@ -71,18 +72,18 @@
         </div>
     </div>
 
-    <!--  Sign up form within modal -->
-    <!-- (Hidden to user until sign up button is clicked) -->
+    <!--  Sign up form within modal 
+    <!-- (Hidden to user until sign up button is clicked) 
     <div class="container">
         <div class="modal hide" id="signUpModal" data-backdrop="static" tabindex="-1">
             <div class="modal-dialogue mw-100 w-75" role="document">
                 <div class="modal-content">
-                    <!-- Modal header & close symbol -->
+                    <!-- Modal header & close symbol 
                     <div class="modal-header text-center">
                         <h2> Please enter your details below:</h2>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
                     </div>
-                    <!-- Sign Up form -->
+                    <!-- Sign Up form 
                     <div class="modal-body">
                         <form role="form" id="signUpForm" method="post">
                             <div class="form-group">
@@ -110,7 +111,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Main Nav Bar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
