--- a/Views/Home/StartAPetition.cshtml
+++ b/Views/Home/StartAPetition.cshtml
@@ -4,65 +4,127 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-    <h1> Start a Cause </h1>
+<!-- <h1> Start a Cause </h1>
+<hr />
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6">
+            <img src="~/Content/images/create.jpg" class="img-fluid" id="createImage" />
+        </div>
+        <!-- Form for creating a cause (petition) -->
+<!-- If users later wish to upload a picture for their cause, it will need to be of specific dimensions-->
+<!-- Otherwise divs will be differing heights
+        <div class="col-lg-6">
+            <form role="form" id="createPetition" method="post">
+                <div class="form-group">
+                    <label for="petitionName" class="labelDecor">Enter a name for your cause: </label>
+                    <input type="text" class="form-control" id="petitionName" name="petitionName" placeholder="Cause Name " />
+                </div>
+                <!-- Select category for petition (This will help with categorization later)
+                <div class="form-group">
+                    <label for="petitionCategory" class="labelDecor"> Cause category: </label>
+                    <select id="petitionType" name="petitionType" class="form-control" required>
+                        <option selected> Choose... </option>
+                        <option> Environment </option>
+                        <option> Humanitarian </option>
+                        <option> Politics </option>
+                        <option> Technology </option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="petitionDescription" class="labelDecor"> Enter a description for your cause: </label>
+                    <textarea class="form-control" id="petitionDescription" name="petitionDescription" rows="5"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary"> Submit </button>
+                <button type="button" class="btn btn-danger"> Cancel </button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!--
+<div id="userCause">
     <hr />
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <img src="~/Content/images/create.jpg" class="img-fluid" id="createImage" />
-            </div>
-            <!-- Form for creating a cause (petition) -->
-            <!-- If users later wish to upload a picture for their cause, it will need to be of specific dimensions-->
-            <!-- Otherwise divs will be differing heights -->
-            <div class="col-lg-6">
-                <form role="form" id="createPetition">
-                    <!-- method="post"-->
-                    <div class="form-group">
-                        <label for="petitionName" class="labelDecor">Enter a name for your cause: </label>
-                        <input type="text" class="form-control" id="petitionName" name="petitionName" placeholder="Cause Name " />
+    <h1> Your Cause </h1>
+    <div class="causeContainer">
+        <div class="causeText" id="userCauseText">
+            <h1 class="causeTitle" id="userCauseTitle"></h1>
+            <p class="causeCategory" id="userCauseCategory"></p>
+            <p class="causeDescription" id="userCauseDescription"></p>
+        </div>
+        <div class="signatureCounter">
+            <p class="signatures"> Signatures: You have signed </p>
+            <p class="signatures"> Sign Count: </p>
+            <p class="socialLinks">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-reddit"></a>
+                <a href="#" class="fa fa-tumblr"></a>
+            </p>
+        </div>
+    </div>
+</div> -->
+
+@model Assessment2___Final.Models.Cause
+
+@{
+    ViewBag.Title = "Start a Cause";
+}
+
+<h1> Start a Cause</h1>
+<hr />
+
+<div class="row">
+    <div class="col-lg-6">
+        <img src="~/Content/images/create.jpg" class="img-fluid" id="createImage" />
+    </div>
+    <div class="col-lg-6">
+        @using (Html.BeginForm("StartAPetition", "Home", FormMethod.Post))
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form">
+                <h4> Your Cause</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })
+                    <div class="col-lg-12">
+                        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                     </div>
-                    <!-- Select category for petition (This will help with categorization later) -->
-                    <div class="form-group">
-                        <label for="petitionCategory" class="labelDecor"> Cause category: </label>
-                        <select id="petitionType" name="petitionType" class="form-control" required>
-                            <option selected> Choose... </option>
-                            <option> Environment </option>
-                            <option> Humanitarian </option>
-                            <option> Politics </option>
-                            <option> Technology </option>
-                        </select>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label" })
+                    <div class="col-lg-12">
+                        @Html.EditorFor(model => model.Category, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
                     </div>
-                    <div class="form-group">
-                        <label for="petitionDescription" class="labelDecor"> Enter a description for your cause: </label>
-                        <textarea class="form-control" id="petitionDescription" name="petitionDescription" rows="5"></textarea>
+                </div>
+
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label" })
+                    <div class="col-lg-12">
+                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                     </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-lg-12">
+                        @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <button type="submit" class="btn btn-primary"> Submit </button>
                     <button type="button" class="btn btn-danger"> Cancel </button>
-                </form>
+                </div>
             </div>
-        </div>
+        }
     </div>
-
-    <div id="userCause">
-        <hr />
-        <h1> Your Cause </h1>
-        <div class="causeContainer">
-            <div class="causeText" id="userCauseText">
-                <h1 class="causeTitle" id="userCauseTitle"></h1>
-                <p class="causeCategory" id="userCauseCategory"></p>
-                <p class="causeDescription" id="userCauseDescription"></p>
-            </div>
-            <div class="signatureCounter">
-                <p class="signatures"> Signatures: You have signed </p>
-                <p class="signatures"> Sign Count: </p>
-                <p class="socialLinks">
-                    <a href="#" class="fa fa-facebook"></a>
-                    <a href="#" class="fa fa-twitter"></a>
-                    <a href="#" class="fa fa-instagram"></a>
-                    <a href="#" class="fa fa-reddit"></a>
-                    <a href="#" class="fa fa-tumblr"></a>
-                </p>
-            </div>
-        </div>
-    </div>
-
+</div>
