Added DB initialier class and linked featured Causes page with it. Need to seed the DB so that Causes will appear on the page.

--- a/Views/Home/FeaturedCauses.cshtml
+++ b/Views/Home/FeaturedCauses.cshtml
@@ -6,8 +6,12 @@
 
     <h1> Featured Causes </h1>
     <hr />
+
+    
+
+    <!--
     <div class="container">
-        <!-- Featured cause row 1 -->
+        <!-- Featured cause row 1 
         <div class="row">
             <div class="col-lg">
                 <div class="causeContainer">
@@ -56,7 +60,7 @@
             </div>
         </div>
 
-        <!-- Featured causes row 2 -->
+        <!-- Featured causes row 2 
         <div class="row">
             <div class="col-lg">
                 <div class="causeContainer">
@@ -105,7 +109,7 @@
             </div>
         </div>
 
-        <!-- Featured cause row 3 -->
+        <!-- Featured cause row 3 
         <div class="row">
             <div class="col-lg">
                 <div class="causeContainer">
@@ -153,4 +157,4 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
