--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -3,7 +3,8 @@
     ViewBag.Title = "Register";
 }
 
-<h2 class="colorHeading">@ViewBag.Title</h2><br />
+<h2 class="colorHeading">@ViewBag.Title</h2>
+<br />
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
@@ -11,6 +12,13 @@
     <h4 class="colorHeading">Create a new account </h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
+    <!-- I added -->
+    <div class="form-group">
+        @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label colorHeading" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+        </div>
+    </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label colorHeading" })
         <div class="col-md-10">
@@ -24,7 +32,7 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label colorHeading"})
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label colorHeading" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
