--- a/Views/Causes/Delete.cshtml
+++ b/Views/Causes/Delete.cshtml
@@ -1,23 +1,16 @@
 ﻿@model Assessment2___Final.Models.Cause
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Delete";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Cause</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.User.Username)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.User.Username)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Title)
         </dt>
@@ -50,9 +43,22 @@
             @Html.DisplayFor(model => model.Image)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Signed)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Signed)
+        </dd>
+
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CauseID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
