--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -133,7 +133,7 @@
                     @Html.ActionLink("Start a Cause ", "StartAPetition", "Home", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("Featured Causes ", "FeaturedCauses", "Home", null, new { @class = "nav-link" })
+                    @Html.ActionLink("Featured Causes ", "Index", "Causes", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
                     @Html.ActionLink("Categories ", "Categories", "Home", null, new { @class = "nav-link" })
