--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -130,7 +130,7 @@
         <div class="collapse navbar-collapse" id="mainNavCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    @Html.ActionLink("Start a Cause ", "StartAPetition", "Home", null, new { @class = "nav-link" })
+                    @Html.ActionLink("Start a Cause ", "Create", "Causes", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
                     @Html.ActionLink("Featured Causes ", "Index", "Causes", null, new { @class = "nav-link" })
