--- a/Views/Causes/Index.cshtml
+++ b/Views/Causes/Index.cshtml
@@ -6,10 +6,10 @@
     
 }
 
-<h2>Index</h2>
+<h2>Featured Causes</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Start your own Cause", "Create")
 </p>
 <table class="table">
     <tr>
