--- a/Views/Causes/Create.cshtml
+++ b/Views/Causes/Create.cshtml
@@ -28,6 +28,7 @@
                         @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                     </div>
                 </div>
+                @*
                 <div class="form-group">
                     @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label" })
                     <div class="col-lg-12">
@@ -35,7 +36,7 @@
                         @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
+                *@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label" })
@@ -45,6 +46,7 @@
                     </div>
                 </div>
 
+                @*
                 <div class="form-group">
                     @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-lg-12">
@@ -52,10 +54,13 @@
                         @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
                     </div>
                 </div>
+                *@
 
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary"> Submit </button>
-                    @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-danger" })
+                <div class="row">
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary"> Submit </button>
+                        @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-danger" })
+                    </div>
                 </div>
             </div>
         }
