--- a/Views/Causes/Details.cshtml
+++ b/Views/Causes/Details.cshtml
@@ -18,13 +18,7 @@
             @Html.DisplayFor(model => model.Title)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Category)
-        </dd>
+       
 
         <dt>
             @Html.DisplayNameFor(model => model.Description)
@@ -34,13 +28,7 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Image)
-        </dd>
+     
 
         <dt>
             @Html.DisplayNameFor(model => model.Signed)
@@ -53,5 +41,14 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "Index")
-</p>
+    <!-- Sign Cause -->
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        <div class="form-actions">
+            <input type="submit" value="Sign This Cause" class='btn'>
+        </div>
+    }
+
+        @Html.ActionLink("Back to List", "Index")
+    </p>
