--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,81 +38,6 @@
 </head>
 <body>
 
-    <!---->
-    <!--  Log in form within modal 
-    <!-- (Hidden to user until log in button is clicked) 
-    <div class="container">
-        <div class="modal hide" id="logInModal" data-backdrop="static" tabindex="-1">
-            <div class="modal-dialogue mw-100 w-75" role="document">
-                <div class="modal-content">
-                    <!-- Modal header & close symbol 
-                    <div class="modal-header text-center">
-                        <h2> Please enter your login details below:</h2>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
-                    </div>
-                    <!-- Log in form 
-                    <div class="modal-body">
-                        <form role="form" id="logInForm" method="post">
-                            <div class="form-group">
-                                <label for="username" class="labelDecor">Username: </label>
-                                <input type="text" class="form-control" id="logInUsername" name="logInUsername" placeholder="Username" />
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="labelDecor">Password: </label>
-                                <input type="password" class="form-control" id="logInPassword" name="logInPassword" placeholder="Password" />
-                            </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--  Sign up form within modal 
-    <!-- (Hidden to user until sign up button is clicked) 
-    <div class="container">
-        <div class="modal hide" id="signUpModal" data-backdrop="static" tabindex="-1">
-            <div class="modal-dialogue mw-100 w-75" role="document">
-                <div class="modal-content">
-                    <!-- Modal header & close symbol 
-                    <div class="modal-header text-center">
-                        <h2> Please enter your details below:</h2>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
-                    </div>
-                    <!-- Sign Up form 
-                    <div class="modal-body">
-                        <form role="form" id="signUpForm" method="post">
-                            <div class="form-group">
-                                <label for="email" class="labelDecor">Email: </label>
-                                <input type="email" class="form-control" id="signUpEmail" name="signUpEmail" placeholder="Email Address" />
-                            </div>
-                            <div class="form-group">
-                                <label for="username" class="labelDecor">Username: </label>
-                                <input type="text" class="form-control" id="signUpUsername" name="signUpUsername" placeholder="Username (Displays as your digital signature)" />
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="labelDecor">Password: </label>
-                                <input type="password" class="form-control" id="signUpPassword" name="signUpPassword" placeholder="Password" />
-                            </div>
-                            <div class="form-group">
-                                <label for="password2" class="labelDecor">Re-enter Password: </label>
-                                <input type="password" class="form-control" id="signUpPassword2" name="signUpPassword2" placeholder="Re-type Password" />
-                            </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
     <!-- Main Nav Bar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 
@@ -144,18 +69,6 @@
                 </li> -->
             </ul>
                     @Html.Partial("_LoginPartial", new { @class = "nav-link" })
-            <!-- 
-            <!-- Log in and Sign up buttons pushed to the right by mr-auto tag in above ul class
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <!-- Button to activate log in form through modal
-                    <button type="submit" class="nav-link btn btn-outline-primary" id="logInButton" data-toggle="modal" data-target="#logInModal"><img src="~/Content/images/icons/person-fill.svg" /> Log In </button>
-                </li>
-                <li class="nav-item">
-                    <!-- Button to activate sign up form through modal
-                    <button type="submit" class="nav-link btn btn-outline-info" id="signUpButton" href="#" data-toggle="modal" data-target="#signUpModal"><img src="~/Content/images/icons/pen.svg" /> Sign Up </button>
-                </li>
-            </ul> -->
         </div>
     </nav>
     <div class="container">
@@ -166,7 +79,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - ClickPoll - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - ClickPoll
         </div>
     </footer>
 
