Added Increment signature to the cause when clicked by user

--- a/Views/Causes/Index.cshtml
+++ b/Views/Causes/Index.cshtml
@@ -67,6 +67,11 @@
                         @Html.ActionLink("Delete", "Delete", new { id = item.CauseID })
                     }
                 }
+
+                @if (User.Identity.IsAuthenticated)
+                {
+                    @Html.ActionLink("Sign", "Sign", new { id = item.CauseID })
+                }
             </td>
         </tr>
     }
