--- a/Content/myStyle.css
+++ b/Content/myStyle.css
@@ -57,12 +57,16 @@ h1 {
     margin-top: 40px;
 }
 
-#createImage {
+/*#createImage {
     margin-top: 80px;
-}
+}*/
 
 #createPetition .error {
     color: red;
+}
+
+#createPetitionForm {
+    margin-top: 10px;
 }
 
 .signatures {
