--- a/Views/Causes/Create.cshtml
+++ b/Views/Causes/Create.cshtml
@@ -8,7 +8,7 @@
 <h1> Start a Cause</h1>
 <hr />
 
-<div class="row">
+<div class="row justify-content-center">
     <div class="col-lg-6">
         <img src="~/Content/images/create.jpg" class="img-fluid" id="createImage" />
     </div>
@@ -17,14 +17,14 @@
         {
             @Html.AntiForgeryToken()
 
-            <div class="form">
+            <div class="form" id="createPetitionForm">
                 <h4> Your Cause</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
                     @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })
                     <div class="col-lg-12">
-                        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { placeholder = "Give your cause a name", @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label" })
                     <div class="col-lg-12">
-                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { placeholder = "Explain your cause", @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -56,13 +56,13 @@
                 </div>
                 *@
 
-                <div class="row">
+                @*<div class="row">*@
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary"> Submit </button>
                         @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-danger" })
                     </div>
                 </div>
-            </div>
+            @*</div>*@
         }
     </div>
 </div>
