Final Changes for demo

--- a/Views/Causes/Details.cshtml
+++ b/Views/Causes/Details.cshtml
@@ -6,6 +6,7 @@
 
 <h2>Details</h2>
 
+<!-- Display Cause details from database -->
 <div>
     <h4>Cause</h4>
     <hr />
@@ -41,7 +42,7 @@
     </dl>
 </div>
 <p>
-
+    <!-- Return to list of causes -->
 
     @Html.ActionLink("Back to List", "Index")
 </p>
