--- a/Views/Causes/Edit.cshtml
+++ b/Views/Causes/Edit.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
+<!-- Only signed in users in admin role should be able to visit this page -->
 <h2>Edit</h2>
 
 
@@ -17,6 +18,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.CauseID)
 
+        <!-- Edit title-->
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -24,16 +26,8 @@
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
         </div>
-        @*
-        <div class="form-group">
-            @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Category, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        *@
 
+        <!-- Edit description-->
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -42,16 +36,7 @@
             </div>
         </div>
 
-        @*
-        <div class="form-group">
-            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        *@
-
+        <!-- Edit Signature number if necessary -->
         <div class="form-group">
             @Html.LabelFor(model => model.Signed, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -60,6 +45,7 @@
             </div>
         </div>
 
+        <!-- Save changes -->
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
@@ -68,6 +54,7 @@
     </div>
 }
 
+<!-- Return to Index -->
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
